# RaceSimulator

./: .gitignore  CMakeLists.txt
RaceSimulation/: AirVehicle.cpp  AirVehicle.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.h  FastCamel.h  FlyingCarpet.cpp  FlyingCarpet.h  GroundVehicle.cpp  GroundVehicle.h  Race.cpp  Race.h  RaceResultItem.cpp  RaceResultItem.h  RaceResultReport.cpp  RaceResultReport.h  RaceSimulationExports.h  RaceType.h  Vehicle.cpp  Vehicle.h  VehicleAssignmentItem.cpp  VehicleAssignmentItem.h  VehicleAssignmentReport.cpp  VehicleAssignmentReport.h  VehicleAssignmentResult.h  VehicleType.h
RaceSimulatorApp/: CMakeLists.txt  Presentation.cpp  Presentation.h  main.cpp
